--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
-body{width:90%;margin:auto;min-width:300px;max-width:2000px}
+body{width:90%;margin:auto;min-width:100px;max-width:2000px}
 
 .container {
-  /*height: 100vh;*/
+  height: 100vh;
   display:grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 100px minmax(200px, 1fr) 100px;
+  grid-template-rows: 50px minmax(50px, 1fr) 50px;
   grid-gap: 10px;
 }
 header {
@@ -27,8 +27,8 @@ grid-row-start: 2;
   grid-row-end: 4;
 }
 footer{
-grid-column-start: 1;
-grid-column-end: 5;
+/*grid-column-start: 1;
+grid-column-end: 4;*/
 
 position: absolute; 
 left: 0 ; right: 0; bottom: 0; 
