--- a/css/main.css
+++ b/css/main.css
@@ -5,22 +5,25 @@
 /* Column container */
 .row {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
 
 /* Create two unequal columns that sits next to each other */
 /* Sidebar/left column */
 .side {
-  flex: 60%; /* Set the width of the sidebar */
-  background-color: #f1f1f1; /* Grey background color */
-  padding: 20px; /* Some padding */
+  flex: 50%; /* Set the width of the sidebar */
+  background-color: #fff; /* Grey background color */
+  padding: 80px; /* Some padding */
+   text-align: center;
+    color:#9F9F9F;
 }
 
 /* Main column */
 .main {
-  flex: 40%; /* Set the width of the main content */
+  flex: 50%; /* Set the width of the main content */
   background-color: white; /* White background color */
   padding: 20px; /* Some padding */
+    text-align: center;
 }
 
 body {
